add github link

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <footer class="footer">
-      <a href="https://www.instagram.com/ijeanpierrebp/" target="_blank">Made by Jean Blanchard</a>
+      <a href="https://github.com/videbleko" target="_blank">Made by Jean Blanchard</a>
       
     </footer>
   </body>
